--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,35 @@
-# requirements.txt
-flask
-firebase_admin
+CacheControl==0.12.6
+cachetools==4.2.4
+certifi==2021.10.8
+charset-normalizer==2.0.7
+click==8.0.3
+colorama==0.4.4
+DateTime==4.3
+Flask==2.0.2
+Flask-SQLAlchemy==2.5.1
+Flask-WTF==1.0.0
+greenlet==1.1.2
+grpcio==1.41.0
+gunicorn==20.1.0
+httplib2==0.20.1
+idna==3.2
+itsdangerous==2.0.1
+Jinja2==3.0.2
+MarkupSafe==2.0.1
+msgpack==1.0.2
+packaging==21.0
+proto-plus==1.19.5
+protobuf==3.18.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pyparsing==2.4.7
+pytz==2021.3
+requests==2.26.0
+rsa==4.7.2
+six==1.16.0
+SQLAlchemy==1.4.28
+uritemplate==3.0.1
+urllib3==1.26.7
+Werkzeug==2.0.2
+WTForms==3.0.0
+zope.interface==5.4.0
