--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
+blinker==1.8.2
 CacheControl==0.12.6
 cachetools==4.2.4
 certifi==2021.10.8
 charset-normalizer==2.0.7
-click==8.0.3
+click==8.1.7
 colorama==0.4.4
 DateTime==4.3
-Flask==2.0.2
+Flask==3.0.3
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==1.0.0
 greenlet==1.1.2
@@ -13,9 +14,9 @@ grpcio==1.41.0
 gunicorn==20.1.0
 httplib2==0.20.1
 idna==3.2
-itsdangerous==2.0.1
-Jinja2==3.0.2
-MarkupSafe==2.0.1
+itsdangerous==2.2.0
+Jinja2==3.1.4
+MarkupSafe==2.1.5
 msgpack==1.0.2
 packaging==21.0
 proto-plus==1.19.5
@@ -24,12 +25,12 @@ pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pyparsing==2.4.7
 pytz==2021.3
-requests==2.26.0
+requests==2.28.1
 rsa==4.7.2
 six==1.16.0
 SQLAlchemy==1.4.28
 uritemplate==3.0.1
 urllib3==1.26.7
-Werkzeug==2.0.2
+Werkzeug==3.0.3
 WTForms==3.0.0
 zope.interface==5.4.0
